# switchboard-plug-mouse-touchpad

./: .travis.yml  AUTHORS  CMakeLists.txt  COPYRIGHT  HACKING  INSTALL  README.md  config.vala.cmake  meson.build  meson_options.txt  mouse.recipe  plug.plugin
.github/workflows/: gettext.yml  main.yml
data/: io.elementary.switchboard.mouse-touchpad.appdata.xml.in  io.elementary.switchboard.mouse-touchpad.gresource.xml  meson.build  mouse-touchpad.appdata.xml.in  mouse-touchpad.gresource.xml  mouse-touchpad.metainfo.xml.in
debian/: README.Debian  README.source  changelog  control  copyright
debian-bak/: control
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+164 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+160 more)
src/: CMakeLists.txt  Plug.vala  meson.build  mouse-settings.vala  mouse-touchpad.vala  page.vala  touchpad-settings.vala
src/Backend/: DaemonSettings.vala  InterfaceSettings.vala  MouseSettings.vala  TouchpadGestures.vala  TouchpadSettings.vala
src/Pages/Mouse/: mouse-page.vala  mouse-settings.vala
src/Pages/Touchpad/: touchpad-page.vala  touchpad-settings.vala
src/Utils/: ToucheggConfig.vala  ToucheggSettings.vala
src/Views/: Clicking.vala  General.vala  Gestures.vala  Mouse.vala  Pointing.vala  Touchpad.vala
src/Widgets/: GeneralSection.vala  MouseSection.vala  Section.vala  SettingLabel.vala  TouchpadSection.vala
